fixed: scrollbar

--- a/src/app/pages/dashboard/dashboard.page.scss
+++ b/src/app/pages/dashboard/dashboard.page.scss
@@ -5,6 +5,12 @@ ion-header,
 
 ion-content {
   background: #F6F8FE;
+  --offset-bottom: auto!important;
+  --overflow: hidden;
+  overflow: auto;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .active {
